# RMD_Motor_Wizard

./: CMakeLists.txt  README.md  RMD_Motor_Wizard.pro  axistag.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  socket_can.hpp
untitled/: mainwindow.cpp
untitled2/: mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  socket_can.cpp  untitled2.pro
